[package]
name = "handy-leetcode"
version = "0.1.1"
edition = "2021"
description = "Handy utilities for leetcode"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github/kxxt/leetcode/handy-leetcode"
authors = ["kxxt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.9"
