[package]
name = "lc-236-lowest-common-ancestor-of-a-binary-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handy-leetcode = { version = "0.1.1", path = "../handy-leetcode" }
leetcode_prelude = "0.2.3"
